parser/src/DBParser.cpp

// Generated from DBParser.g4 by ANTLR 4.13.2


#include "DBParserVisitor.h"

#include "DBParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DBParserStaticData final {
  DBParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DBParserStaticData(const DBParserStaticData&) = delete;
  DBParserStaticData(DBParserStaticData&&) = delete;
  DBParserStaticData& operator=(const DBParserStaticData&) = delete;
  DBParserStaticData& operator=(DBParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag dbparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<DBParserStaticData> dbparserParserStaticData = nullptr;

void dbparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (dbparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(dbparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DBParserStaticData>(
    std::vector<std::string>{
      "script", "statement", "importStmt", "packageDecl", "typeDecl", "fieldDecl", 
      "typeRef", "typeArg", "primitiveType", "qualifiedName", "createTableStmt", 
      "createRoleStmt", "createApiKeyStmt", "grantStmt", "iamRule", "iamPermList", 
      "iamPerm", "iamPermOrStar", "queryStmt", "fromClause", "joinClause", 
      "whereClause", "groupByClause", "havingClause", "selectClause", "projectionBlock", 
      "projectionEntry", "orderByClause", "orderItem", "limitClause", "letBinding", 
      "insertStmt", "literalInsertBody", "pipelineInsertBody", "valueBlock", 
      "valueEntry", "updateStmt", "setClause", "setEntry", "deleteStmt", 
      "truncateStmt", "upsertStmt", "returningClause", "expr", "primary", 
      "functionCall", "argList", "aggregateCall", "aggregateFn", "literal", 
      "arrayLiteral", "exprList"
    },
    std::vector<std::string>{
      "", "'import'", "'from'", "'as'", "'where'", "'let'", "'select'", 
      "'order'", "'by'", "'limit'", "'group'", "'having'", "'join'", "'left'", 
      "'on'", "'asc'", "'desc'", "'contains'", "'insert'", "'into'", "'update'", 
      "'set'", "'delete'", "'upsert'", "'conflict'", "'returning'", "'truncate'", 
      "'create'", "'table'", "'package'", "'type'", "'role'", "'grant'", 
      "'to'", "'allow'", "'deny'", "'read'", "'write'", "'api_key'", "'for'", 
      "'expires'", "'in'", "'int32'", "'int64'", "'float32'", "'float64'", 
      "'decimal'", "'bool'", "'text'", "'uuid'", "'timestamp'", "'json'", 
      "'array'", "'vector'", "'map'", "'true'", "'false'", "'null'", "'and'", 
      "'or'", "'not'", "'<->'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
      "'+'", "'-'", "'*'", "'/'", "'='", "'.'", "','", "':'", "'\\u003F'", 
      "'('", "')'", "'{'", "'}'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "IMPORT", "FROM", "AS", "WHERE", "LET", "SELECT", "ORDER", "BY", 
      "LIMIT", "GROUP", "HAVING", "JOIN", "LEFT", "ON", "ASC", "DESC", "CONTAINS", 
      "INSERT", "INTO", "UPDATE", "SET", "DELETE", "UPSERT", "CONFLICT", 
      "RETURNING", "TRUNCATE", "CREATE", "TABLE", "PACKAGE", "TYPE", "ROLE", 
      "GRANT", "TO", "ALLOW", "DENY", "READ", "WRITE", "API_KEY", "FOR", 
      "EXPIRES", "IN", "K_INT32", "K_INT64", "K_FLOAT32", "K_FLOAT64", "K_DECIMAL", 
      "K_BOOL", "K_TEXT", "K_UUID", "K_TIMESTAMP", "K_JSON", "K_ARRAY", 
      "K_VECTOR", "K_MAP", "TRUE", "FALSE", "NULL", "AND", "OR", "NOT", 
      "DISTANCE", "EQ", "NEQ", "LEQ", "GEQ", "LT", "GT", "PLUS", "MINUS", 
      "STAR", "SLASH", "ASSIGN", "DOT", "COMMA", "COLON", "QUESTION", "LPAREN", 
      "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "INTEGER_LIT", 
      "DECIMAL_LIT", "STRING_LIT", "SINGLE_STRING_LIT", "DURATION_LIT", 
      "IDENTIFIER", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  dbparserParserStaticData = std::move(staticData);
}

}

DBParser::DBParser(TokenStream *input) : DBParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

DBParser::DBParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  DBParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *dbparserParserStaticData->atn, dbparserParserStaticData->decisionToDFA, dbparserParserStaticData->sharedContextCache, options);
}

DBParser::~DBParser() {
  delete _interpreter;
}

const atn::ATN& DBParser::getATN() const {
  return *dbparserParserStaticData->atn;
}

std::string DBParser::getGrammarFileName() const {
  return "DBParser.g4";
}

const std::vector<std::string>& DBParser::getRuleNames() const {
  return dbparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& DBParser::getVocabulary() const {
  return dbparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView DBParser::getSerializedATN() const {
  return dbparserParserStaticData->serializedATN;
}


//----------------- ScriptContext ------------------------------------------------------------------

DBParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DBParser::ScriptContext::EOF() {
  return getToken(DBParser::EOF, 0);
}

std::vector<DBParser::StatementContext *> DBParser::ScriptContext::statement() {
  return getRuleContexts<DBParser::StatementContext>();
}

DBParser::StatementContext* DBParser::ScriptContext::statement(size_t i) {
  return getRuleContext<DBParser::StatementContext>(i);
}


size_t DBParser::ScriptContext::getRuleIndex() const {
  return DBParser::RuleScript;
}


std::any DBParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DBParserVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

DBParser::ScriptContext* DBParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, DBParser::RuleScript);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6120800294) != 0)) {
      setState(104);
      statement();
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(110);
    match(DBParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

DBParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DBParser::ImportStmtContext* DBParser::StatementContext::importStmt() {
  return getRuleContext<DBParser::ImportStmtContext>(0);
}

DBParser::PackageDeclContext* DBParser::StatementContext::packageDecl() {
  return getRuleContext<DBParser::PackageDeclContext>(0);
}

DBParser::TypeDeclContext* DBParser::StatementContext::typeDecl() {
  return getRuleContext<DBParser::TypeDeclContext>(0);
}

DBParser::CreateTableStmtContext* DBParser::StatementContext::createTableStmt() {
  return getRuleContext<DBParser::CreateTableStmtContext>(0);
}

DBParser::CreateRoleStmtContext* DBParser::StatementContext::createRoleStmt() {
  return getRuleContext<DBParser::CreateRoleStmtContext>(0);
}

DBParser::GrantStmtContext* DBParser::StatementContext::grantStmt() {
  return getRuleContext<DBParser::GrantStmtContext>(0);
}

DBParser::CreateApiKeyStmtContext* DBParser::StatementContext::createApiKeyStmt() {
  return getRuleContext<DBParser::CreateApiKeyStmtContext>(0);
}

DBParser::QueryStmtContext* DBParser::StatementContext::queryStmt() {
  return getRuleContext<DBParser::QueryStmtContext>(0);
}

DBParser::InsertStmtContext* DBParser::StatementContext::insertStmt() {
  return getRuleContext<DBParser::InsertStmtContext>(0);
}

DBParser::UpdateStmtContext* DBParser::StatementContext::updateStmt() {
  return getRuleContext<DBParser::UpdateStmtContext>(0);
}

DBParser::DeleteStmtContext* DBParser::StatementContext::deleteStmt() {
  return getRuleContext<DBParser::DeleteStmtContext>(0);
}

DBParser::UpsertStmtContext* DBParser::StatementContext::upsertStmt() {
  return getRuleContext<DBParser::UpsertStmtContext>(0);
}

DBParser::TruncateStmtContext* DBParser::StatementContext::truncateStmt() {
  return getRuleContext<DBParser::TruncateStmtContext>(0);
}


size_t DBParser::StatementContext::getRuleIndex() const {
  return DBParser::RuleStatement;
}


std::any DBParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DBParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

DBParser::StatementContext* DBParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, DBParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(125);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(112);
      importStmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(113);
      packageDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(114);
      typeDecl();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(115);
      createTableStmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(116);
      createRoleStmt();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(117);
      grantStmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(118);
      createApiKeyStmt();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(119);
      queryStmt();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(120);
      insertStmt();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(121);
      updateStmt();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(122);
      deleteStmt();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(123);
      upsertStmt();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(124);
      truncateStmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStmtContext ------------------------------------------------------------------

DBParser::ImportStmtContext::ImportStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DBParser::ImportStmtContext::IMPORT() {
  return getToken(DBParser::IMPORT, 0);
}

tree::TerminalNode* DBParser::ImportStmtContext::STRING_LIT() {
  return getToken(DBParser::STRING_LIT, 0);
}


size_t DBParser::ImportStmtContext::getRuleIndex() const {
  return DBParser::RuleImportStmt;
}


std::any DBParser::ImportStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DBParserVisitor*>(visitor))
    return parserVisitor->visitImportStmt(this);
  else
    return visitor->visitChildren(this);
}

DBParser::ImportStmtContext* DBParser::importStmt() {
  ImportStmtContext *_localctx = _tracker.createInstance<ImportStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, DBParser::RuleImportStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    match(DBParser::IMPORT);
    setState(128);
    match(DBParser::STRING_LIT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageDeclContext ------------------------------------------------------------------

DBParser::PackageDeclContext::PackageDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DBParser::PackageDeclContext::PACKAGE() {
  return getToken(DBParser::PACKAGE, 0);
}

tree::TerminalNode* DBParser::PackageDeclContext::IDENTIFIER() {
  return getToken(DBParser::IDENTIFIER, 0);
}


size_t DBParser::PackageDeclContext::getRuleIndex() const {
  return DBParser::RulePackageDecl;
}


std::any DBParser::PackageDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DBParserVisitor*>(visitor))
    return parserVisitor->visitPackageDecl(this);
  else
    return visitor->visitChildren(this);
}

DBParser::PackageDeclContext* DBParser::packageDecl() {
  PackageDeclContext *_localctx = _tracker.createInstance<PackageDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, DBParser::RulePackageDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(DBParser::PACKAGE);
    setState(131);
    match(DBParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclContext ------------------------------------------------------------------

DBParser::TypeDeclContext::TypeDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DBParser::TypeDeclContext::TYPE() {
  return getToken(DBParser::TYPE, 0);
}

tree::TerminalNode* DBParser::TypeDeclContext::IDENTIFIER() {
  return getToken(DBParser::IDENTIFIER, 0);
}

tree::TerminalNode* DBParser::TypeDeclContext::LBRACE() {
  return getToken(DBParser::LBRACE, 0);
}

tree::TerminalNode* DBParser::TypeDeclContext::RBRACE() {
  return getToken(DBParser::RBRACE, 0);
}

std::vector<DBParser::FieldDeclContext *> DBParser::TypeDeclContext::fieldDecl() {
  return getRuleContexts<DBParser::FieldDeclContext>();
}

DBParser::FieldDeclContext* DBParser::TypeDeclContext::fieldDecl(size_t i) {
  return getRuleContext<DBParser::FieldDeclContext>(i);
}


size_t DBParser::TypeDeclContext::getRuleIndex() const {
  return DBParser::RuleTypeDecl;
}


std::any DBParser::TypeDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DBParserVisitor*>(visitor))
    return parserVisitor->visitTypeDecl(this);
  else
    return visitor->visitChildren(this);
}

DBParser::TypeDeclContext* DBParser::typeDecl() {
  TypeDeclContext *_localctx = _tracker.createInstance<TypeDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, DBParser::RuleTypeDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(133);
    match(DBParser::TYPE);
    setState(134);
    match(DBParser::IDENTIFIER);
    setState(135);
    match(DBParser::LBRACE);
    setState(139);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DBParser::IDENTIFIER) {
      setState(136);
      fieldDecl();
      setState(141);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(142);
    match(DBParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldDeclContext ------------------------------------------------------------------

DBParser::FieldDeclContext::FieldDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DBParser::FieldDeclContext::IDENTIFIER() {
  return getToken(DBParser::IDENTIFIER, 0);
}

tree::TerminalNode* DBParser::FieldDeclContext::COLON() {
  return getToken(DBParser::COLON, 0);
}

DBParser::TypeRefContext* DBParser::FieldDeclContext::typeRef() {
  return getRuleContext<DBParser::TypeRefContext>(0);
}


size_t DBParser::FieldDeclContext::getRuleIndex() const {
  return DBParser::RuleFieldDecl;
}


std::any DBParser::FieldDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DBParserVisitor*>(visitor))
    return parserVisitor->visitFieldDecl(this);
  else
    return visitor->visitChildren(this);
}

DBParser::FieldDeclContext* DBParser::fieldDecl() {
  FieldDeclContext *_localctx = _tracker.createInstance<FieldDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, DBParser::RuleFieldDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    match(DBParser::IDENTIFIER);
    setState(145);
    match(DBParser::COLON);
    setState(146);
    typeRef();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeRefContext ------------------------------------------------------------------

DBParser::TypeRefContext::TypeRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t DBParser::TypeRefContext::getRuleIndex() const {
  return DBParser::RuleTypeRef;
}

void DBParser::TypeRefContext::copyFrom(TypeRefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DecimalTypeContext ------------------------------------------------------------------

tree::TerminalNode* DBParser::DecimalTypeContext::K_DECIMAL() {
  return getToken(DBParser::K_DECIMAL, 0);
}

tree::TerminalNode* DBParser::DecimalTypeContext::LPAREN() {
  return getToken(DBParser::LPAREN, 0);
}

std::vector<tree::TerminalNode *> DBParser::DecimalTypeContext::INTEGER_LIT() {
  return getTokens(DBParser::INTEGER_LIT);
}

tree::TerminalNode* DBParser::DecimalTypeContext::INTEGER_LIT(size_t i) {
  return getToken(DBParser::INTEGER_LIT, i);
}

tree::TerminalNode* DBParser::DecimalTypeContext::COMMA() {
  return getToken(DBParser::COMMA, 0);
}

tree::TerminalNode* DBParser::DecimalTypeContext::RPAREN() {
  return getToken(DBParser::RPAREN, 0);
}

tree::TerminalNode* DBParser::DecimalTypeContext::QUESTION() {
  return getToken(DBParser::QUESTION, 0);
}

DBParser::DecimalTypeContext::DecimalTypeContext(TypeRefContext *ctx) { copyFrom(ctx); }


std::any DBParser::DecimalTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DBParserVisitor*>(visitor))
    return parserVisitor->visitDecimalType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayTypeContext ------------------------------------------------------------------

tree::TerminalNode* DBParser::ArrayTypeContext::K_ARRAY() {
  return getToken(DBParser::K_ARRAY, 0);
}
